--- a/SignUp/SignupTutor.html
+++ b/SignUp/SignupTutor.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turonpk/signup/Student</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="signuptutor.css">
 </head>
 
 <body>
@@ -23,54 +23,238 @@
             </div>
         </div>
         <hr>
-
         <div class="pannel">
-            <h2>Sign Up</h2>
-            <form action="">
-                <div class="form-item-username">
-                    <input required type="text" name="firstName" id="firstName" placeholder="First Name">
-                    <input required type="text" name="lastName" id="lastName" placeholder="Last Name">
+            <h1>Apply as Tutor</h1>
+            <div class="outer">
+                <div class="inner">
+                    <label for="fullname">FULL NAME</label>
                 </div>
-
-                <div class="form-item">
-                    <input required type="email" name="email" id="email" placeholder="Email">
+                <div class="inner">
+                    <input class="input" required type="text" name="FullName" id="FullName" placeholder="Full Name">
                 </div>
-
-                <div class="form-item">
-                    <span class="pwd-format">
-                    </span>
-                    <input required type="password" name="password" id="password" placeholder="Enter password">
-                    <input required type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm password">
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="FatherName">FATHER's NAME</label>
                 </div>
-
-                <div class="form-item">
-                    <input class="form-control" type="text" name="NIC" id="NIC" required onkeyup="validateNIC();"
-                        maxlength=13 placeholder="CNIC"/>
-                    <span id="message1">Enter NIC Number without "-"</span>
-
+                <div class="inner">
+                    <input class="input" required type="text" name="FatherName" id="FatherName" placeholder="FATHER's NAME">
                 </div>
-
-
-                <div class="accept-box">
-                    <input required type="checkbox" name="accept" id="accept">
-                    <p>I accept the <a href="#">Terms & Conditions</a></p>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="email">EMAIL</label>
                 </div>
+                <div class="inner">
+                    <input class="input" required type="email" name="email" id="email" placeholder="EMAIL">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="phonenumber">PHONE No.</label>
+                </div>
+                <div class="inner">
+                    <input class="input" required type="number" name="phonenumber" id="phonenumber" placeholder="03xxxxxxxxx"
+                        maxlength="11">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="CNIC">CNIC</label>
+                </div>
+                <div class="inner ">
+                    <input class="input" required type="number" name="cnic" id="cnic" placeholder="xxxxx-xxxxxxx-x">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="fcnic">FATHER's CNIC</label>
+                </div>
+                <div class="inner ">
+                    <input class="input" required type="number" name="fcnic" id="fcnic" placeholder="xxxxx-xxxxxxx-x">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="dob">DATE OF BIRTH</label>
+                </div>
+                <div class="inner ">
+                    <input class="input" required type="date" name="dob" id="dob" placeholder="mm/dd/yyyy">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="gender">GENDER</label>
+                </div>
+                <div class="inner field">
+                    <select class="input" required name="gender">
+                        <option value="none" selected>Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="address">PERMANENT ADDRESS</label>
+                </div>
+                <div class="inner">
+                    <input class="input" required type="text" name="address" id="address">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="city">CITY</label>
+                </div>
+                <div class="inner field">
+                    <select class="input" required name="CITY">
+                        <option value="none" selected> SELECT CITY</option>
+                        <option value="Karachi">Karachi</option>
+                        <option value="Lahore">Lahore</option>
+                        <option value="Islamabad">Islamabad</option>
+                    </select>
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label  for="qualification">LAST QUALIFICATION</label>
+                </div>
+                <div class="inner field">
+                    <select class="input" required name="qualification">
+                        <option value="none" selected> SELECT QUALIFICATION</option>
+                        <option value="Intermediate">Intermediate</option>
+                        <option value="Undergraduate">Undergraduate</option>
+                        <option value="Graduate">Graduate</option>
+                        <option value="Masters">Masters</option>
+                        <option value="PhD">PhD</option>
+                    </select>
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="doc">UPLOAD DOCUMENTS</label>
+                </div>
+                <div class="inner field">
+                    <input class="input" type="file" name="doc" id="doc">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="CnicFront">CNIC FRONT</label>
+                </div>
+                <div class="inner field">
+                    <input class="input" type="file" name="CnicFront" id="CnicFront">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="CnicBack">CNIC Back</label>
+                </div>
+                <div class="inner field">
+                    <input class="input" type="file" name="CnicBack" id="CnicBack">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="fCnicFront">FATHER's CNIC FRONT</label>
+                </div>
+                <div class="inner field">
+                    <input class="input" type="file" name="fCnicFront" id="fCnicFront">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <label for="fCnicBack">FATHER's CNIC Back</label>
+                </div>
+                <div class="inner field">
+                    <input class="input" type="file" name="fCnicBack" id="fCnicBack">
+                </div>
+            </div>
+            <div class="outer">
+                <div class="inner">
+                    <!-- <input type="file" name="myImage" accept="image/x-png,image/gif,image/jpeg" /> -->
+                    <p><input required class="input" type="file" accept="image/x-png,image/gif,image/jpeg*" name="image" id="file" onchange="loadFile(event)"
+                            style="display: none;"></p>
+                    <p class="profilepic-btn" ><label for="file" style="cursor: pointer; color: blueviolet;">Upload profile Image</label></p>
+                    <p><img id="output" width="200" /></p>
 
-                <div class="form-btns">
-                    <button class="signup" type="submit">Sign Up</button>
-                    <div class="options">
-                        Already have an account? <a href="../login/TutorLogin.html">Login here</a>
+                    <script>
+                        var loadFile = function (event) {
+                            var image = document.getElementById('output');
+                            image.src = URL.createObjectURL(event.target.files[0]);
+                        };
+                    </script>
+                </div>
+                <div class="profilepicrules">
+                    <div class="rules">
+                        <ul>
+                            <li><span class="rules">With white or blue
+                                    background</span>
+                            </li>
+                            <li><span class="rules">File size must be less than
+                                    1MB</span>
+                            </li>
+                            <li><span class="rules">File type: jpg, jpeg, png</span>
+                            </li>
+                            <li><span class="rules">Upload your recent passport size
+                                    picture</span></li>
+                            <li><span class="rules">Your Face should be clearly
+                                    visible
+                                    without any Glasses</span></li>
+                        </ul>
                     </div>
                 </div>
+            </div>
+            <div class="outer">
+                <div class="terms">
+                    <ol>
+                        <li>
+                            <p>I hereby, solemnly declare that the data and facts mentioned herein are true and correct
+                                to the best of my knowledge. Further, I will abide by all the established and future
+                                regulations and policies oF TURONPK</p>
+                        </li>
+                        <li>
+                            <p>I hereby accept the responsibilities of good conduct and guarantee that I will not be
+                                involved in any other activity, political or ethical, but learning during my stay in the
+                                program.
+                            </p>
+                        </li>
+                        <li>
+                            <p>I hereby accept the responsibilities of good conduct and guarantee that I will not be
+                                involved in any other activity, political or ethical, but learning during my stay in the
+                                program.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Upon getting access, of the platform, I will complete the required objectives by TURONPK.
+                            </p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="accept-box">
+                <p style="color: white ;"><input required type="checkbox" name="accept" id="accept" > I accept the <a href="#">Terms &
+                        Conditions</a></p>
+            </div>
 
-            </form>
+            <div class="form-btns">
+                <button class="signup" type="submit">APPLY</button>
+                <div class="options">
+                    <p style="color: white;">Already have an account? <a href="../login/TutorLogin.html">Login here</a></p> 
+                </div>
+            </div>
+
         </div>
+
 
         <hr>
         <footer>
             <div id="footer">
                 <h3>Contact Detatils</h3>
-                <address>Contact helpdesk <a href="mailto:mehgillani5373@gamil.com">Email</a>
+                <address>Contact helpdesk <a href="mailto:##">Email</a>
                 </address>
                 <a href="">facebook</a><br>
                 <a href="">twitter</a><br>
