Courses page updated

--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,9 @@
     <div id="wrapper" class="container">
         <div id="header">
             <div id="logo">
-                <h1> <a href="index.html">Turonpk.com<sup style="font-size: 16px;">&reg;</sup> <p style="font-size: 11px;">Best Tutors provider</p></h1></a> 
+                <h1> <a href="index.html">Turonpk.com<sup style="font-size: 16px;">&reg;</sup>
+                        <p style="font-size: 11px;">Best Tutors provider</p>
+                </h1></a>
             </div>
             <div id="menu">
                 <ul>
@@ -25,7 +27,260 @@
             </div>
         </div>
         <hr>
+        <div class="pannel">
+            <h2 class="text">COURSES</h2>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">9<sup>th</sup> Grade </label></a>
 
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTRY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PST</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">10<sup>th </sup> Grade</label></a>
+
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTRY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PST</a>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">1<sup>st </sup> Year</label></a>
+
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTERY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PST</a>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">2<sup>nd </sup> Year</label></a>
+
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTRY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PST</a>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">O-LEVEL</label></a>
+
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTRY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> PST</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ISLAMIYAT</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ACOUNTING</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BUSINESS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ECONOMICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PHYCHLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">GEOGRAOHY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">HUMANITIES</a>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="grade">
+                <a href=""><label class="Label" for="grade">A-LEVEL</label></a>
+
+                <div class="subject-pannel">
+                    <div class="subject">
+                        <a href="#">PHYSICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">CHEMISTRY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BIOLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">MATHS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ENGLISH</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">COMPUTER</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">URDU</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#"> PST</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ISLAMIYAT</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ACOUNTING</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">BUSINESS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">ECONOMICS</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">PHYCHLOGY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">GEOGRAOHY</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">HUMANITIES</a>
+                    </div>
+
+                </div>
+                <br>
+            </div>
+            <div class="test-prep">
+                <a href=""><label class="Label" for="grade">ENTRY TEST PREPRATION</label></a>
+
+                <div class="test-pannel">
+
+                    <div class="subject">
+                        <a href="#">ECAT</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">MDCAT</a>
+                    </div>
+                    <div class="subject">
+                        <a href="#">NTS</a>
+                    </div>
+                    
+                </div>
+
+            </div>
+        </div>
         <p id="totop"><a href="#">Back To Top</a></p>
         <hr>
         <footer>
