Tutor page design

--- a/SignUp/SignupTutor.html
+++ b/SignUp/SignupTutor.html
@@ -176,7 +176,7 @@
                     <!-- <input type="file" name="myImage" accept="image/x-png,image/gif,image/jpeg" /> -->
                     <p><input required class="input" type="file" accept="image/x-png,image/gif,image/jpeg*" name="image" id="file" onchange="loadFile(event)"
                             style="display: none;"></p>
-                    <p class="profilepic-btn" ><label for="file" style="cursor: pointer; color: blueviolet;">Upload profile Image</label></p>
+                    <p class="profilepic-btn" style=""><label for="file" style="cursor: pointer; color: blueviolet;">Upload profile Image</label></p>
                     <p><img id="output" width="200" /></p>
 
                     <script>
