--- a/Tutors.html
+++ b/Tutors.html
@@ -13,11 +13,13 @@
     <div id="wrapper" class="container">
         <div id="header">
             <div id="logo">
-                <h1> <a href="index.html">Turonpk.com<sup style="font-size: 16px;">&reg;</sup> <p style="font-size: 11px;">Best Tutors provider</p></h1></a> 
+                <h1> <a href="index.html">Turonpk.com<sup style="font-size: 16px;">&reg;</sup>
+                        <p style="font-size: 11px;">Best Tutors provider</p>
+                </h1></a>
             </div>
             <div id="menu">
                 <ul>
-                    <li ><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="current_page_item"><a href="Tutors.html">Tutors</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="login-Signup.html">LOG IN/sign Up</a></li>
@@ -27,21 +29,146 @@
             </div>
         </div>
         <hr>
+        <div id="slider">
+            <figure>
+                <img src="" width="1100" height="400" />
+                <img src="" width="1100" height="400" />
+                <img src="" width="1100" height="400" />
+                <img src="" width="1100" height="400" />
+                <img src="" width="1100" height="400" />
 
+            </figure>
+        </div>
+        <div class="FeaturedProfiles">
+            <h2 class="Heading"> Featured Tutors</h2>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="profile-pic">
+                    <center><img class="profilepic" src="Profile Image/Profile.jpg" alt="centered image"></center>
+                </div>
+                <div class="info-Name"> <a href="">Name</a>
+                </div>
+                <div>
+                    <div class="info-Ex"> <a href="">Qualification</a> </div>
+                    <div class="info-Ex"> <a href=""> rating</a></div>
+                </div>
+            </div>
+            <div><a href="#">
+                    <P class="more">MORE</P>
+                </a>
+            </div>
+            <div class="text">
+                <ul>
+                    <li> Fastest growing tutoring platform.</li>
+                    <li>On demand 1-to-1 tutions.</li>
+                    <li>Every tutor is vetted through a rigorous screening process with subject exam, mock tutoring
+                        sessions, mentor review and a third-party background check.</li>
+                    <li>Our tutors includes university students, certified teachers, college professors, and
+                        professionals with master's degree and PhD's.</li>
+                    <li>Every tutor is skilled at tutoring online and helping students understand problems in most
+                        efficient manner.</li>
+                </ul>
+            </div>
+            <div class="social">Connect with us</div>
+            <center>
+                <div class="ContactUs">
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="Icons/twitter.png" alt=""></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="icons/google plus.png" alt=""></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="icons/linkedin.png" alt=""></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="icons/instagram.png" alt=""></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="icons/yt.png" alt=""></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href=""><img class="icons" src="icons/facebook.png" alt=""></a>
+            </center>
+        </div>
         <p id="totop"><a href="#">Back To Top</a></p>
         <hr>
         <footer>
             <div id="footer">
                 <h3>Contact Detatils</h3>
-                <address>Contact helpdesk <a href="mailto:mehgillani5373@gamil.com">Email</a>
+                <address>Contact helpdesk <a href="mailto:##">Email</a>
                 </address>
                 <a href="">facebook</a><br>
                 <a href="">twitter</a><br>
                 <a href=""></a>
-                <address>abc block 123 street abc123 karachi pakistan</address>
+                <address>address</address>
             </div>
         </footer>
-    </div>
+        </div>
+        </div>
+
+
+   
 </body>
 
 </html>
