--- a/Tutors.html
+++ b/Tutors.html
@@ -132,23 +132,23 @@
                     </div>
 
                     <div class="icons">
-                        <a href=""><img class="icons" src="icons/google plus.png" alt=""></a>
+                        <a href=""><img class="icons" src="Icons/google plus.png" alt=""></a>
                     </div>
 
                     <div class="icons">
-                        <a href=""><img class="icons" src="icons/linkedin.png" alt=""></a>
+                        <a href=""><img class="icons" src="Icons/instagram.png" alt=""></a>
                     </div>
 
                     <div class="icons">
-                        <a href=""><img class="icons" src="icons/instagram.png" alt=""></a>
+                        <a href=""><img class="icons" src="Icons/linkedin.png" alt=""></a>
                     </div>
 
                     <div class="icons">
-                        <a href=""><img class="icons" src="icons/yt.png" alt=""></a>
+                        <a href=""><img class="icons" src="Icons/yt.png" alt=""></a>
                     </div>
 
                     <div class="icons">
-                        <a href=""><img class="icons" src="icons/facebook.png" alt=""></a>
+                        <a href=""><img class="icons" src="Icons/facebook.png" alt=""></a>
             </center>
         </div>
         <p id="totop"><a href="#">Back To Top</a></p>
